Ajout notifiaction email

--- a/nelitfy.toml
+++ b/nelitfy.toml
@@ -16,3 +16,10 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[plugins]]
+package = "@netlify/plugin-form-handler"
+
+[forms]
+  [[forms.contact]]
+    notifications = ["LartDuWeb@proton.me"]
